exports[`timingFunctions should return easeInBack cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.600, -0.280, 0.735, 0.045)",
}
`;

exports[`timingFunctions should return easeInCirc cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.600,  0.040, 0.980, 0.335)",
}
`;

exports[`timingFunctions should return easeInCubic cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.550,  0.055, 0.675, 0.190)",
}
`;

exports[`timingFunctions should return easeInExpo cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.950,  0.050, 0.795, 0.035)",
}
`;

exports[`timingFunctions should return easeInOutBack cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.680, -0.550, 0.265, 1.550)",
}
`;

exports[`timingFunctions should return easeInOutCirc cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.785,  0.135, 0.150, 0.860)",
}
`;

exports[`timingFunctions should return easeInOutCubic cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.645,  0.045, 0.355, 1.000)",
}
`;

exports[`timingFunctions should return easeInOutExpo cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(1.000,  0.000, 0.000, 1.000)",
}
`;

exports[`timingFunctions should return easeInOutQuad cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.455,  0.030, 0.515, 0.955)",
}
`;

exports[`timingFunctions should return easeInOutQuart cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.770,  0.000, 0.175, 1.000)",
}
`;

exports[`timingFunctions should return easeInOutQuint cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.860,  0.000, 0.070, 1.000)",
}
`;

exports[`timingFunctions should return easeInOutSine cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.445,  0.050, 0.550, 0.950)",
}
`;

exports[`timingFunctions should return easeInQuad cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.550,  0.085, 0.680, 0.530)",
}
`;

exports[`timingFunctions should return easeInQuart cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.895,  0.030, 0.685, 0.220)",
}
`;

exports[`timingFunctions should return easeInQuint cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.755,  0.050, 0.855, 0.060)",
}
`;

exports[`timingFunctions should return easeInSine cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.470,  0.000, 0.745, 0.715)",
}
`;

exports[`timingFunctions should return easeOutBack cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.175,  0.885, 0.320, 1.275)",
}
`;

exports[`timingFunctions should return easeOutCirc cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.075,  0.820, 0.165, 1.000)",
}
`;

exports[`timingFunctions should return easeOutCubic cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.215,  0.610, 0.355, 1.000)",
}
`;

exports[`timingFunctions should return easeOutExpo cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.190,  1.000, 0.220, 1.000)",
}
`;

exports[`timingFunctions should return easeOutQuad cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.250,  0.460, 0.450, 0.940)",
}
`;

exports[`timingFunctions should return easeOutQuart cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.165,  0.840, 0.440, 1.000)",
}
`;

exports[`timingFunctions should return easeOutQuint cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.230,  1.000, 0.320, 1.000)",
}
`;

exports[`timingFunctions should return easeOutSine cubic-bezier 1`] = `
Object {
  "transition-timing-function": "cubic-bezier(0.390,  0.575, 0.565, 1.000)",
}
`;
